  * [ACCEPTED 1999/05/04] Libtool archive (*.la) files in -dev' packages 
    closes: Bug#37257, Bug#37338
  * [ACCEPTED 1999/04/28] Logrotation. Standardizer on logrotate. 
    closes: Bug# 37342
  * [ACCEPTED 1999/05/23] Rewrite of section 5.7 (Programs for the X
    Window System) closes: Bug#38212
  * [ACCEPTED 1999/05/15] Separate menu policy (like virtual package list)
    closes: Bug#37713
  * [ACCEPTED 1999/05/09] Adopt the FHS in place of FSSTND
    Changed all references to the proper FHS versions. This was a first
    scan, so some references may still need to be changed. closes: Bug#37345

 -- Manoj Srivastava <phil@hands.com>  Tue, 29 Jun 1999 14:57:47 -0500

debian-policy (2.5.1.0) unstable; urgency=low

  * Removed double '>' marks from the policy document. closes: Bug#35095
  * Corrected canonical source for "Csh Programming Considered Harmful"
    closes: Bug#36286 Bug#32499
  * Fixed typo in invocation of update-rc.d. closes: Bug#34988 Bug#34543
  * Fixed misspelling of accessible. Ran ispell over the rest of the
    document (painful because of the large number of technical terms in
    there). closes: Bug#34233
  * Make the binary package contain the version.ent as well. closes: Bug#31033
  * Fixed typo s/as is/is/. closes: Bug#30302
  * AMENDMENT 23/04/1999: changed /etc/nntpserver recommendation to
    /etc/news/server. closes: Bug#21875
  * Added the current list of policy maintainers. closes: Bug#30148

 -- Manoj Srivastava <srivasta@debian.org>  Tue, 27 Apr 1999 11:10:29 -0500

debian-policy (2.5.0.0) unstable; urgency=low

  * AMENDMENT: Added in changes in Bug #25911, which rearranged sections
    to create a new section 4, namely, files. Section 3.3 ("Files") should
    become Section 4.  The Sections that are currently Section 4 and
    Section 5 should be moved down to become Section 5 and Section 6
    accordingly. 

    What is now Section 5.5 ("Log files") should be moved to be a