@@ -2862,7 +2862,7 @@
 	  
 	  
       <sect>
-	<heading>Programs for the X Window system</heading>
+	<heading>Programs for the X Window System</heading>
 	  
 	<p>
 	  Some programs can be configured with or without support for the X
